# CC-Word_Read

./: .gitignore  .pnpmrc  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CHAPTER_FEATURE.md  CHAPTER_NOTIFICATION_IMPLEMENTATION.md  CHAPTER_OPTIMIZATION.md  DEVELOPMENT_PROGRESS.md  DOCS_INDEX.md  FEATURE_SUMMARY.md  ICON_UPGRADE.md  IOS_NOTIFICATION_OPTIMIZATION.md  LICENSE  NOTIFICATION_FIX.md  PROJECT_ANALYSIS.md  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  README.md  README_TAURI.md  REAL_WORD_COMPARISON.md  REFACTORING_COMPLETE.md  SETUP_COMPLETE.md  TAURI_SETUP.md  UI_ENHANCEMENT_COMPLETE.md  UI_ENHANCEMENT_V2.md  UI_FIX_COMPLETE.md  UI优化开发文档.md  UPGRADE_PLAN.md  WORD_UI_OPTIMIZATION.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup.ps1  test-novel.txt  tsconfig.json  tsconfig.node.json  vite.config.ts  word-novel-reader.html  (+6 more)
.github/workflows/: release.yml  static.yml
docs/: PAGINATION_FEATURE.md
scripts/: sync-version.ts
src/: App.vue  app.js  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.vue  AddBookmarkDialog.vue  BookmarkPanel.vue  ChapterDialog.vue  Editor.vue  Icon.vue  NotificationContainer.vue  OnboardingGuide.vue  ProgressIndicator.vue  RenameDialog.vue  Ribbon.vue  ShortcutsHelp.vue  StatusBar.vue  SuccessDialog.vue  TitleBar.vue  UpdateChecker.vue
src/composables/: useDocumentParser.ts  useEditorScroll.ts  useFileImporter.ts  useFileSystem.ts  useHistory.ts  useKeyboardShortcuts.ts  useNovelReader.ts  usePageCalculator.ts  useProgress.ts  useWindowControls.ts
src/router/: index.ts
src/services/: errorHandler.ts  eventBus.ts  logger.ts  progress.ts  storage.ts
src/stores/: bookmark.ts  history.ts  novel.ts  novelChapters.ts  novelState.ts  novelStorage.ts  reader.ts  settings.ts  ui.ts
src/styles/: document.css  icons-fallback.css  ribbon.css  statusbar.css  (+3 more)
v3/: .gitignore  .prettierrc  IMPORT_GUIDE.md  PHASE1_SUMMARY.md  README.md  env.example  eslint.config.js  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+56 files in other folders)
