[package]
name = "cc-word-read"
version = "0.3.13"
description = "还原Word界面的小说阅读器"
authors = ["CC-Word_Read Team"]
license = "MIT"
repository = "https://github.com/your-username/CC-Word_Read"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_word_read_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cc-word-read"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Windows specific optimizations
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
incremental = true
opt-level = 1

# 针对发布构建的优化配置
[profile.release-fast]
inherits = "release"
codegen-units = 16  # 并行编译，加快构建速度
lto = "thin"        # 使用轻量级 LTO
opt-level = 2       # 平衡优化级别和编译速度

